# Nibbler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Nibbler.cpp  Nibbler.hpp  NibblerException.cpp  NibblerException.hpp  Readme.md  Snake.hpp  a.out  absol~install.sh  clean.sh  cmake_install.cmake  install.sh  main.cpp  nibbler
SnakeAllegro/: Makefile  SnakeAllegro.cpp  SnakeAllegro.hpp  a.out  main.cpp  mainbb.cpp  run.sh  snake
SnakeAllegro/allegro/: INSTALL_RECEIPT.json
SnakeAllegro/allegro/lib/: liballegro.dylib  liballegro_acodec.5.2.5.dylib  liballegro_acodec.so.5.2.5  liballegro_audio.dylib  liballegro_audio.so.5.2.5  liballegro_color.dylib  liballegro_color.so.5.2.5  liballegro_dialog.5.2.5.dylib  liballegro_dialog.so.5.2  liballegro_dialog.so.5.2.5  liballegro_font.5.2.5.dylib  liballegro_font.so.5.2.5  liballegro_image.5.2.5.dylib  liballegro_image.so.5.2.5  liballegro_main.dylib  liballegro_main.so.5.2.5  liballegro_memfile.dylib  liballegro_memfile.so.5.2.5  liballegro_physfs.dylib  liballegro_physfs.so.5.2.5  liballegro_primitives.5.2.dylib  liballegro_primitives.so.5.2.5  liballegro_ttf.dylib  liballegro_ttf.so.5.2.5  liballegro_video.5.2.dylib  (+1 more)
SnakeFLTK/: Makefile  SnakeFLTK.cpp  SnakeFLTK.hpp  main.cpp  run.sh
SnakeSDL/: Makefile  SnakeSDL.cpp  SnakeSDL.hpp  main.cpp  snake
SnakeSFML/: Makefile  SnakeSFML.cpp  SnakeSFML.hpp  a.out  main.cpp  run.sh  snake
SnakeSdl/: SnakeSDL.cpp  SnakeSDL.hpp  a.out  main.cpp  run.sh
SnakeSdl/sdl2/: INSTALL_RECEIPT.json
SnakeSfml/: a.out  main.cpp  run.sh
SnakeSfml/sfml/: INSTALL_RECEIPT.json
(+29 files in other folders)
